--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>
 	</title>
-	<link rel="stylesheet"
-	href="styles.css">
+
 	<script src="sss.js"></script>
 </head>
 <body>
 <input id="a" name="text">
-<button onclick="show()">push me</button>
+<button onclick="generate()">push me</button>
 <div id="mes"></div>
 
 </body>
