--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <input id="a" name="text">
-<button onclick="generate()">push me</button>
+<button onclick="generate()">Сгенерировать</button>
+<button onclick="zerofill()">Заполнить нулями</button>
 <div id="mes"></div>
 
 </body>
