--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <input id="a" name="text">
 <button onclick="generate()">Сгенерировать</button>
 <button onclick="zerofill()">Заполнить нулями</button>
+<button onclick="summ()">Посчитать сумму</button>
 <div id="mes"></div>
 
 </body>
