--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>
 	</title>
-
 	<script src="sss.js"></script>
 </head>
 <body>
-<input id="a" name="text">
-<button onclick="generate()">Сгенерировать</button>
-<button onclick="zerofill()">Заполнить нулями</button>
-<button onclick="summ()">Посчитать сумму</button>
-<div id="mes"></div>
-
+	<span>Имя</span><input type="text" id="name">
+	<br>
+	<span>фамилия</span><input type="text" id="surname">
+	<br>
+	<button id = 'btn_next'onclick="next()">далее</button>
+	<button id = 'btn_prev'onclick="previous()">назад</button>
 </body>
 </html>
