--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>
 	</title>
+	<script src="jquery.js"></script>
 	<script src="sss.js"></script>
 </head>
 <body>
+	<button onclick="loadFromSite()">Загрузить</button>
+	<br>
 	<span>Имя</span><input type="text" id="name">
 	<br>
 	<span>фамилия</span><input type="text" id="surname">
