--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
 	</title>
 	<script src="jquery.js"></script>
 	<script src="sss.js"></script>
+	
 </head>
-<body>
-	<button onclick="loadFromSite()">Загрузить</button>
-	<br>
-	<span>Имя</span><input type="text" id="name">
-	<br>
-	<span>фамилия</span><input type="text" id="surname">
-	<br>
-	<button id = 'btn_next'onclick="next()">далее</button>
-	<button id = 'btn_prev'onclick="previous()">назад</button>
+<body onLoad="loadFromSite()">
+	<button id="btn_direct">Сортировать по алфавиту</button>
+	<button id="btn_reverse">Сортировать в обратном порядке</button>
+    <script>loadFromSite()</script>
+	<table id="tbl_all">
+		<thead>
+		<tr>
+		<th>ID</th>
+		<th>Имя</th>
+		<th>Фамилия</th>
+		<th></th>
+		</tr>
+	    </thead>
+	    <tbody></tbody>
+	</table>
+	<div id="info"></div>
 </body>
 </html>
