--- a/canvas/index.html
+++ b/canvas/index.html
@@ -7,6 +7,6 @@
 	<script src="draw.js"></script>
 </head>
 <body onload="draw()">
-	 <canvas id="canva" width="600" height="300" style="border: 1px solid black" ></canvas>
+	 <canvas id="canvas" width="288" height="512"></canvas>
 </body>
 </html>
