--- a/index.html
+++ b/index.html
@@ -5,31 +5,25 @@
 	<title>jQuery UI Example Page</title>
 	<script src="jquery.js"></script>
 	<script src="jquery-ui.js"></script>
-	<link href="jquery-ui.css" href="jquery-ui.css">
+	<link rel="stylesheet" href="jquery-ui.css">
+	<link rel="stylesheet" href="jquery-ui.structure.css">
 	<script src="sss.js"></script>
-	<link href="jquery-ui.css" href="styles.css">
+	<link href="styles.css">
 	<style type="text/css"> 
-
-	#drag1
-{
+		#el1
+		{
 padding:15px;
 border-style:solid;
 border-width:1px;
 width:130px;
 height:100px;
 }
-#drag2
-{
-padding:25px;
-border-style:solid;
-border-width:2px;
-width:100px;
-height:130px;
-}
+
+
 </style>	
 	<body>
-	<div id='drag1'>move</div>
-	<div id='drag2'>move1</div>
+	<div id='el1'>Диффернцирование потенциальных интегралов в степени вохведения расщепления атомов в адронном колайдере по дифернциалу</div>
+	
 
 </body>
 </html>
