--- a/index.html
+++ b/index.html
@@ -10,20 +10,42 @@
 	<script src="sss.js"></script>
 	<link href="styles.css">
 	<style type="text/css"> 
-		#el1
+		#el1, #el2, #el3, #drop1
 		{
 padding:15px;
 border-style:solid;
 border-width:1px;
-width:130px;
-height:100px;
+width:100px;
+height:90px;
+}
+img {
+	width:120px;
+    height:120px;
+
 }
 
 
 </style>	
 	<body>
 	<div id='el1'>Диффернцирование потенциальных интегралов в степени вохведения расщепления атомов в адронном колайдере по дифернциалу</div>
-	
+
+
+
+
+	 <ol id="sort1" class="ui-widget">
+<li><img src='ghoul.jpg'>Я гуль 1</li>
+<li><img src='ghoul.jpg'>Я джул 2</li>
+<li><img src='ghoul.jpg'>Я гульнара 3</li>
+<li><img src='ghoul.jpg'>Я дед инс 4</li>
+</ol>
+
+<div id='el2'>Диффернцирование </div>
+<div id='el3'> потенциальных </div>
+<p id='drop1'> обратных гиперболических теорем индукционного интегрировалиния </p>
+
+
+
+
 
 </body>
 </html>
